fix bug where didn't work on IE ; added beta sign on front page

--- a/css/splash.css
+++ b/css/splash.css
@@ -21,6 +21,7 @@ svg {
     font-size: 72px;
     margin-bottom: 0px;
     margin-top: 0px;
+    display: inline;
 }
 
 .little {
